--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
           <div class="carousel-caption">
             <h1>Chinese Rice</h1>
             <p>
-              A Chinese rice meal typically consists of rice served with a variety of dishes, creating a balanced and flavorful dining experience. It is also be prepared with Day-old cooked rice, stir-fried with vegetables, eggs, meat, seafood, and seasonings like soy sauce, garlic, and ginger.
+              A Chinese rice meal typically consists of rice served with a
+              variety of dishes, creating a balanced and flavorful dining
+              experience. It is also be prepared with Day-old cooked rice,
+              stir-fried with vegetables, eggs, meat, seafood, and seasonings
+              like soy sauce, garlic, and ginger.
             </p>
             <p><a class="btn btn-default btn-lg" href="#">Order Now</a></p>
           </div>
@@ -194,9 +198,15 @@
           />
           <h2>Director</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste nobis
-            voluptatum, sit dicta voluptatem distinctio molestiae, harum dolor,
-            sunt, porro dolorum? Sapiente corrupti nobis, enim.
+            Jeffrey Adele is a seasoned director in the food industry, known for
+            innovative strategies and driving brand success. With over 15 years
+            of experience, Jeffrey Adele has led numerous initiatives that have
+            transformed food brands and captured market share. His deep
+            understanding of consumer preferences, market trends, and culinary
+            excellence has propelled Sucrecuisine to new heights. Jeffrey Adele
+            is passionate about creating delicious and nutritious products that
+            resonate with consumers, making them a respected leader in the food
+            industry.
           </p>
           <p><a href="#" class="btn btn-default">Read More &raquo;</a></p>
         </div>
@@ -210,9 +220,16 @@
           />
           <h2>Chief Marketing Manager</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste nobis
-            voluptatum, sit dicta voluptatem distinctio molestiae, harum dolor,
-            sunt, porro dolorum? Sapiente corrupti nobis, enim.
+            Stepanhie Pearson is a dynamic and accomplished chief marketing
+            manager in the food industry, with a passion for driving brand
+            growth and consumer engagement. With 12 years of experience,
+            Stepanhie Pearson has spearheaded successful marketing campaigns
+            that have elevated Sucrecuisine to new levels of recognition and
+            profitability. Her strategic insights, creativity, and ability to
+            connect with consumers have earned her a reputation as a leader in
+            the field. Stepanhie Pearson is dedicated to showcasing the unique
+            flavors and values of Sucrecuisine, making it a beloved choice among
+            food enthusiasts worldwide.
           </p>
           <p><a href="#" class="btn btn-default">Read More &raquo;</a></p>
         </div>
@@ -226,9 +243,16 @@
           />
           <h2>Customer Relations Manager</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste nobis
-            voluptatum, sit dicta voluptatem distinctio molestiae, harum dolor,
-            sunt, porro dolorum? Sapiente corrupti nobis, enim.
+            John Obama is a dedicated and customer-focused customer relations
+            manager in the food industry, with a strong commitment to delivering
+            exceptional service and building lasting relationships. With 9 years
+            of experience, John Obama has played a pivotal role in ensuring
+            customer satisfaction and loyalty for Sucrecuisine. His expertise in
+            understanding customer needs, resolving issues effectively, and
+            implementing customer-centric strategies has contributed
+            significantly to the success of the brand. John Obama is passionate
+            about providing an outstanding experience for every customer, making
+            Sucrecuisine a trusted choice in the food market.
           </p>
           <p><a href="#" class="btn btn-default">Read More &raquo;</a></p>
         </div>
@@ -246,20 +270,20 @@
       <div class="row content">
         <div class="col-md-7 mickey">
           <h2 class="content-heading">
-            First heading goes here.
-            <span class="text-muted"> this looks great</span>
+            Banana Bread
+            <span class="text-muted"> Pastry</span>
           </h2>
           <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quo
-            cum beatae, adipisci officia rem voluptatem, accusamus non maxime
-            illum aut odit voluptatibus accusantium culpa minima modi quas
-            repellat sunt.
+            Banana bread is a popular baked treat made from ripe bananas, flour,
+            sugar, eggs, butter or oil, and baking soda or baking powder. It is
+            often flavored with vanilla extract and can include additions like
+            nuts, chocolate chips, or cinnamon.
           </p>
         </div>
         <div class="col-md-5">
           <img
-            src="images/paying-kid.jpg"
-            alt="playing kid"
+            src="images/cake.jpg"
+            alt="cake"
             class="content-image img-reponsive center-block"
           />
         </div>
@@ -268,21 +292,21 @@
       <div class="row content">
         <div class="col-md-5">
           <img
-            src="images/paying-kid.jpg"
+            src="images/chicken.jpg"
             alt="playing kid"
             class="content-image img-reponsive center-block"
           />
         </div>
         <div class="col-md-7 mickey">
           <h2 class="content-heading">
-            First heading goes here.
-            <span class="text-muted"> this looks great</span>
+            Peppered Sauted Chicken
+            <span class="text-muted"> Grills</span>
           </h2>
           <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quo
-            cum beatae, adipisci officia rem voluptatem, accusamus non maxime
-            illum aut odit voluptatibus accusantium culpa minima modi quas
-            repellat sunt.
+            Roast chicken is a classic main dish often served during holiday
+            meals or special occasions. It is seasoned with herbs, spices, and
+            sometimes stuffed with a stuffing mixture before roasting in the
+            oven until golden brown and tender.
           </p>
         </div>
       </div>
@@ -290,20 +314,21 @@
       <div class="row content">
         <div class="col-md-7 mickey">
           <h2 class="content-heading">
-            First heading goes here.
-            <span class="text-muted"> this looks great</span>
+            Chinese Fried Rice.
+            <span class="text-muted"> Main Dish</span>
           </h2>
           <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quo
-            cum beatae, adipisci officia rem voluptatem, accusamus non maxime
-            illum aut odit voluptatibus accusantium culpa minima modi quas
-            repellat sunt.
+            A Chinese rice meal typically consists of rice served with a variety
+            of dishes, creating a balanced and flavorful dining experience. It
+            is also be prepared with Day-old cooked rice, stir-fried with
+            vegetables, eggs, meat, seafood, and seasonings like soy sauce,
+            garlic, and ginger.
           </p>
         </div>
         <div class="col-md-5">
           <img
-            src="images/paying-kid.jpg"
-            alt="playing kid"
+            src="images/rice.jpg"
+            alt="rice"
             class="content-image img-reponsive center-block"
           />
         </div>
